cmake_minimum_required(VERSION 3.2)
project (hello)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(mylib hello.cpp ../inc)
include_directories(../inc)
add_library(mylib STATIC $(myfiles))
install(TARGETS mylib DESTINATION lib)
install(FILES mylib.h DESTIONATION include)
target_link_libraries(hello mylib)
file(GLOB SOURCES "*.cpp")

add_executable(hello ${SOURCES})